--- a/client.html
+++ b/client.html
@@ -42,7 +42,11 @@
             </div>
 
             <div class="mainbar" id="mainbar">
-                <div class="gameStatus" id="gameStatus"></div>
+                <div class="statusBox" id="statusBox">
+                    <label class="gameOpponent">You are playing against</label><br>
+                    <label class="gameSymbol">You are 'X'</label><br>
+                    <label class="gameTurn">Opponent is making a move</label>
+                </div>
                 <div class="board" id="board">
                     <div class="cell" id="cell"></div>
                     <div class="cell" id="cell"></div>
